--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "coding-challenge-server",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Coding challenge",
+  "author": "Sajeen",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -25,13 +25,16 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.1.3",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
+    "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
